feat: Add ATTACH support for Flight SQL databases
Enable proper database attachment using DuckDB's ATTACH statement:
- ATTACH 'grpc://host:port' AS db (TYPE duckarrow)
- SHOW SCHEMAS/TABLES FROM db
- SELECT * FROM db.schema.table
- Tables appear in information_schema

Implementation:
- C++ storage extension layer (StorageExtension, Catalog, Schema, Table)
- Go callbacks for Flight SQL metadata (GetSchemas, GetTables, GetColumns)
- Scan callbacks with projection pushdown support
- DuckDB v1.2.0 API compatibility layer

Tests:
- ATTACH/DETACH lifecycle
- Schema and table discovery
- Qualified queries (2-part and 3-part names)
- information_schema integration
- Projection pushdown

CI:
- C++ toolchain installation for all platforms
- Integration test verifies extension loads

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -37,6 +37,10 @@ jobs:
         with:
           go-version-file: 'go.mod'
           cache: true
+      - name: Install C++ toolchain (Linux)
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y cmake build-essential
       - name: Run unit tests
         run: make test-unit
 
@@ -81,6 +85,17 @@ jobs:
         with:
           python-version: '3.x'
 
+      - name: Install C++ toolchain (Linux)
+        if: runner.os == 'Linux'
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y cmake build-essential
+
+      - name: Install C++ toolchain (Windows)
+        if: runner.os == 'Windows'
+        run: |
+          choco install cmake --installargs 'ADD_CMAKE_TO_PATH=System' -y
+
       - name: Setup CGO (Windows)
         if: runner.os == 'Windows'
         run: |
@@ -116,3 +131,8 @@ jobs:
 
       - name: Test extension load
         run: ./duckdb -unsigned -c "LOAD './extension/duckarrow.duckdb_extension';"
+
+      # NOTE: ATTACH tests (make test-attach) and other Flight SQL tests are skipped in CI
+      # because they require a running Flight SQL server at localhost:31337.
+      # These tests can be run locally with: make test-attach
+      # To enable in CI, a Flight SQL server would need to be started as a service.
