fix: Use CGO_LDFLAGS_ALLOW for macOS undefined symbols
CGO has a security allowlist that rejects -undefined flag.
Use -Wl,-undefined,dynamic_lookup and set CGO_LDFLAGS_ALLOW
in CI to permit this flag for macOS builds.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -113,6 +113,9 @@ jobs:
 
       - name: Build extension
         run: make build GOOS=${{ matrix.goos }} GOARCH=${{ matrix.goarch }}
+        env:
+          # Allow -undefined flag for macOS to resolve DuckDB symbols at runtime
+          CGO_LDFLAGS_ALLOW: '-undefined|-Wl,-undefined'
 
       - uses: actions/upload-artifact@v4
         with:
