--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -43,8 +43,8 @@ jobs:
           sudo apt-get install -y cmake build-essential
       - name: Download DuckDB C++ header
         run: |
-          curl -L -o /tmp/libduckdb-src.zip https://github.com/duckdb/duckdb/releases/download/v1.4.3/libduckdb-src.zip
-          unzip -p /tmp/libduckdb-src.zip duckdb.hpp > duckdb-go-api/duckdb.hpp
+          curl -L -o "${{ runner.temp }}/libduckdb-src.zip" https://github.com/duckdb/duckdb/releases/download/v1.4.3/libduckdb-src.zip
+          unzip -p "${{ runner.temp }}/libduckdb-src.zip" duckdb.hpp > duckdb-go-api/duckdb.hpp
       - name: Run unit tests
         run: make test-unit
 
@@ -108,8 +108,8 @@ jobs:
 
       - name: Download DuckDB C++ header
         run: |
-          curl -L -o /tmp/libduckdb-src.zip https://github.com/duckdb/duckdb/releases/download/v1.4.3/libduckdb-src.zip
-          unzip -p /tmp/libduckdb-src.zip duckdb.hpp > duckdb-go-api/duckdb.hpp
+          curl -L -o "${{ runner.temp }}/libduckdb-src.zip" https://github.com/duckdb/duckdb/releases/download/v1.4.3/libduckdb-src.zip
+          unzip -p "${{ runner.temp }}/libduckdb-src.zip" duckdb.hpp > duckdb-go-api/duckdb.hpp
 
       - name: Build extension
         run: make build GOOS=${{ matrix.goos }} GOARCH=${{ matrix.goarch }}
