fix: Add --unresolved-symbols=ignore-all for Windows MinGW linker
Windows DLLs typically require all symbols resolved at link time.
Use MinGW's --unresolved-symbols=ignore-all to defer DuckDB symbol
resolution to runtime when the extension is loaded.

Note: This may have limitations per mingw-w64 known issues.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -114,8 +114,8 @@ jobs:
       - name: Build extension
         run: make build GOOS=${{ matrix.goos }} GOARCH=${{ matrix.goarch }}
         env:
-          # Allow -undefined flag for macOS to resolve DuckDB symbols at runtime
-          CGO_LDFLAGS_ALLOW: '-undefined|-Wl,-undefined'
+          # Allow linker flags for runtime symbol resolution (macOS and Windows)
+          CGO_LDFLAGS_ALLOW: '-undefined|-Wl,-undefined|-Wl,--unresolved-symbols=.*'
 
       - uses: actions/upload-artifact@v4
         with:
