fix: Update API version to v1.4.3 for DuckDB upgrade
- Update duckdb.Init() call from v1.2.0 to v1.4.3 in main.go
- Download duckdb.h header (C API) in addition to duckdb.hpp (C++ header) in CI
- Both headers needed: duckdb.hpp for C++ storage extension, duckdb.h for Go bindings

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -41,10 +41,11 @@ jobs:
         run: |
           sudo apt-get update
           sudo apt-get install -y cmake build-essential
-      - name: Download DuckDB C++ header
+      - name: Download DuckDB headers
         run: |
           curl -L -o "${{ runner.temp }}/libduckdb-src.zip" https://github.com/duckdb/duckdb/releases/download/v1.4.3/libduckdb-src.zip
           unzip -p "${{ runner.temp }}/libduckdb-src.zip" duckdb.hpp > duckdb-go-api/duckdb.hpp
+          unzip -p "${{ runner.temp }}/libduckdb-src.zip" duckdb.h > duckdb-go-api/duckdb.h
       - name: Run unit tests
         run: make test-unit
 
@@ -106,10 +107,11 @@ jobs:
           echo "CC=gcc" >> $env:GITHUB_ENV
           echo "CGO_ENABLED=1" >> $env:GITHUB_ENV
 
-      - name: Download DuckDB C++ header
+      - name: Download DuckDB headers
         run: |
           curl -L -o "${{ runner.temp }}/libduckdb-src.zip" https://github.com/duckdb/duckdb/releases/download/v1.4.3/libduckdb-src.zip
           unzip -p "${{ runner.temp }}/libduckdb-src.zip" duckdb.hpp > duckdb-go-api/duckdb.hpp
+          unzip -p "${{ runner.temp }}/libduckdb-src.zip" duckdb.h > duckdb-go-api/duckdb.h
 
       - name: Build extension
         run: make build GOOS=${{ matrix.goos }} GOARCH=${{ matrix.goarch }}
@@ -133,7 +135,7 @@ jobs:
           path: ./extension
 
       - name: Install DuckDB
-        # NOTE: Version must match DUCKDB_VERSION in Makefile
+        # NOTE: Version must match DUCKDB_VERSION in Makefile (currently v1.4.3)
         run: |
           wget https://github.com/duckdb/duckdb/releases/download/v1.4.3/duckdb_cli-linux-amd64.zip
           unzip duckdb_cli-linux-amd64.zip
