wip: Add C++ stubs for storage extension (ATTACH blocked by DuckDB internals)
Add scaffolding for ATTACH support via DuckDB storage extension API.
The extension builds and loads successfully on Linux, but ATTACH
functionality is blocked because DBConfig::GetConfig() is an internal
DuckDB API not exported from the binary.

Changes:
- Add cpp/duckdb_stubs.cpp with stub implementations for DuckDB C++
  symbols (typeinfo, vtables, constructors, virtual methods)
- Update Makefile to use external linker on Linux (required for
  --whole-archive to include C++ symbols)
- Update CI to allow CGO linker flags
- Make storage extension registration optional in main.go
- Disable storage registration in duckarrow_storage.cpp (requires
  unexported DuckDB internal API)

The extension works via table functions (duckarrow_query, etc.) and
replacement scan (SELECT * FROM duckarrow.schema.table). ATTACH would
require either:
1. DuckDB exposing a C API for storage extension registration
2. Building DuckDB from source with the extension compiled in

Preserving this work for potential future use if DuckDB adds the
required APIs.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -116,8 +116,8 @@ jobs:
       - name: Build extension
         run: make build GOOS=${{ matrix.goos }} GOARCH=${{ matrix.goarch }}
         env:
-          # Allow linker flags for runtime symbol resolution (macOS and Windows)
-          CGO_LDFLAGS_ALLOW: '-undefined|-Wl,-undefined|-Wl,--unresolved-symbols=.*'
+          # Allow linker flags for runtime symbol resolution and whole-archive
+          CGO_LDFLAGS_ALLOW: '-undefined|-Wl,-undefined|-Wl,--unresolved-symbols=.*|-Wl,--whole-archive|-Wl,--no-whole-archive'
 
       - uses: actions/upload-artifact@v4
         with:
